fix nav issues on mobile

--- a/SASS/_navs.scss
+++ b/SASS/_navs.scss
@@ -3,10 +3,8 @@
   top:0;
   width:100%;
   text-align: right;
-  // margin-bottom:30px;
+  margin-bottom:30px;
   z-index: 100;
-  display:flex;
-  align-items: center;
   background-color:rgba(255, 255, 255, 0.9);
   // height:79px;
   .brgr-index{
@@ -19,6 +17,7 @@
     cursor: pointer;
   }
 }
+
 .nav-projects{
   position: fixed;
   top:0;
@@ -26,8 +25,6 @@
   width:100%;
   z-index: 200;
   margin:auto;
-  display:flex;
-  align-items: center;
   background-color: rgba(255, 255, 255, 0.9);
   height:50px;
   .brgr-projects{
@@ -237,7 +234,7 @@
   color:$p-grey;
   display: inline-block;
   text-transform:uppercase;
-  vertical-align: bottom;
+  vertical-align: middle;
 }
 .vbar{
   vertical-align: middle;
