--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -215,9 +215,8 @@
   top: 0;
   width: 100%;
   text-align: right;
+  margin-bottom: 30px;
   z-index: 100;
-  display: flex;
-  align-items: center;
   background-color: rgba(255, 255, 255, 0.9);
 }
 .nav-index .brgr-index {
@@ -237,8 +236,6 @@
   width: 100%;
   z-index: 200;
   margin: auto;
-  display: flex;
-  align-items: center;
   background-color: rgba(255, 255, 255, 0.9);
   height: 50px;
 }
@@ -453,7 +450,7 @@
   color: #5A5A5A;
   display: inline-block;
   text-transform: uppercase;
-  vertical-align: bottom;
+  vertical-align: middle;
 }
 
 .vbar {
